# clash-verge-rev

./: CHANGELOG.txt  package.json  pnpm-lock.yaml
archbuild/local_build/: build.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: cmds.rs  feat.rs  main.rs
src-tauri/src/core/: core.rs  handle.rs  hotkey.rs  sysopt.rs  tray.rs
src-tauri/src/enhance/: tun.rs
src-tauri/src/utils/: dirs.rs  help.rs  init.rs  resolve.rs  server.rs
src/components/layout/: layout-control.tsx  layout-traffic.tsx  use-custom-theme.ts
src/components/profile/: profile-item.tsx
src/components/proxy/: proxy-render.tsx
src/components/setting/: setting-verge.tsx
src/components/setting/mods/: layout-viewer.tsx  update-viewer.tsx
src/components/test/: test-item.tsx
src/pages/: _layout.tsx  profiles.tsx  rules.tsx
src/services/: cmds.ts
