[package]
name = "clash-verge"
version = "1.6.7"
description = "clash verge"
authors = ["zzzgydi", "wonfen", "MystiPanda"]
license = "GPL-3.0-only"
repository = "https://github.com/oomeow/clash-verge-rev.git"
default-run = "clash-verge"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
warp = "0.3.7"
anyhow = "1.0.82"
dirs = "5.0.1"
open = "5.1.2"
log = "0.4.21"
dunce = "1.0.4"
log4rs = "1.3.0"
nanoid = "0.4"
chrono = "0.4.38"
sysinfo = "0.31.0"
boa_engine = "0.19"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
once_cell = "1.19"
port_scanner = "0.1.5"
delay_timer = "0.11"
parking_lot = "0.12"
# auto-launch = "0.5.0"
percent-encoding = "2.3.1"
window-shadows = { version = "0.2.2" }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"] }
sysproxy = { git = "https://github.com/zzzgydi/sysproxy-rs", branch = "main" }
tauri = { version = "2.0.0-rc", features = [
    "protocol-asset",
    "image-ico",
    "image-png",
    "devtools",
    "tray-icon",
] }
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-process = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-updater = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.0"

[target.'cfg(windows)'.dependencies]
runas = "=1.2.0"
deelevate = "0.2.0"
winreg = "0.52.0"

[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-global-shortcut = "2.0.0-rc.0"
tauri-plugin-updater = "2.0.0-rc.0"
tauri-plugin-window-state = "2.0.0-rc"
#openssl

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
verge-dev = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
